# src/controllers/cities.js
@@ -1,0 +1,18 @@
+const express = require('express');
+const Success = require('../helpers/successHandler');
+const {findCities} = require('../services/cityService');
+
+/**
+ * 
+ * @param {express.Request} req 
+ * @param {express.Response} res 
+ */
+ const cities = async (req, res) => {
+    const cities = await findCities(req.params.city);
+    const success = new Success(cities);
+    res.json(success);
+};
+
+module.exports = {
+    cities
+}
