# src/loaders/swagger/swagger.json
@@ -1,8 +1,8 @@
 {
   "openapi": "3.0.0",
   "info": {
-    "title": "API Rest base repo.",
-    "description": "## This is a base api to start new projects.",
+    "title": "Weather API.",
+    "description": "Get current weather for your city.",
     "version": "0.0.1",
     "contact": {
       "email": "adriansanchez88@gmail.com"
@@ -21,119 +21,102 @@
   ],
   "tags": [    
     {
-      "name": "users",
-      "description": "Operations about users."
+      "name": "Weather",
+      "description": "Get current weather details."
+    },
+    {
+      "name": "Cities",
+      "description": "Get cities list."
     }
   ],
   "paths": {    
-    "/users/": {
+    "/weather/{city}/{id}?longitude=&latitude=": {
       "get": {
         "tags": [
-          "users"
+          "Weather"
         ],
-        "summary": "Get a list of all existing users.",
-        "description": "",             
+        "summary": "Call current weather data for the coordinates of one location.",
+        "description": "**Note:** You must select at least one pair of parameters (longitud & latitude or city & id)",
+        "parameters":[          
+          {
+            "name": "longitude",
+            "in": "query",
+            "description": "The longitude of the location to get current weather. Must use with `latitude`.",
+            "required": false,
+            "schema": {
+              "type":"number"
+            }
+          },
+          {
+            "name": "latitude",
+            "in": "query",
+            "description": "The latitude of the location to get current weather. Must use with `longitude`.",
+            "required": false,
+            "schema": {
+              "type":"number"
+            }
+          },
+          {
+            "name": "city",
+            "in": "path",
+            "description": "The name of the city to get current weather. Must use with `id`.",
+            "required": false,
+            "schema": {
+              "type":"string"
+            }
+          },
+          {
+            "name": "id",
+            "in": "path",
+            "description": "The id of the city to get current weather. Must use with `city`.",
+            "required": false,
+            "schema": {
+              "type":"string"
+            }
+          }             
+        ],            
         "responses": {
           "200": {
-            "description": "The array of users in JSON format.",
+            "description": "The current weather data in JSON format.",
             "content": {
               "application/json":{
                 "schema":{
-                  "type": "array",
-                  "items":{
-                    "$ref": "#/components/schemas/User"                    
-                  }
+                  "$ref": "#/components/schemas/Success for Weather"
                 }
               }
             }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "users"
-        ],
-        "summary": "Create a new user.",
-        "description": "",
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema":{              
-                  "$ref": "#/components/schemas/User"                    
-                }
-              }
-            }
-          },
-        "responses": {
-          "201": {
-            "description": "User created."
           }
         }
       }
     },
-    "/users/{id}": {
-      "put": {
+    "/cities/{city}": {
+      "get": {
         "tags": [
-          "users"
+          "Cities"
         ],
-        "summary": "Update an existing user by providing the id.",
-        "description": "",          
-        "parameters":[          
-          {
-            "name": "id",
-            "in": "path",
-            "description": "The id of the user that needs to be updated.",
-            "required": true,
-            "schema": {
-              "type":"integer"
-            }
-          }          
-        ],
-        "requestBody": {
-          "required": true,
-          "content": {
-            "application/json": {
-              "schema":{              
-                  "$ref": "#/components/schemas/User"                    
-                }
-              }
-            }
-          },
-        "responses": {
-          "200": {
-            "description": "The user updated",
-            "content":{
-              "application/json":{
-                "schema":{
-                  "type": "object",
-                  "$ref": "#/components/schemas/User" 
-                }
-              }              
-            }
-          }
-        }
-      },
-      "delete": {
-        "tags": [
-          "users"
-        ],
-        "summary": "Delete an existing user by providing the id.",
+        "summary": "Get a list of locations with the same name that the specified city name.",
         "description": "",
         "parameters":[          
           {
-            "name": "id",
+            "name": "city",
             "in": "path",
-            "description": "The id of the user that needs to be deleted.",
+            "description": "The name of the city.",
             "required": true,
             "schema": {
-              "type":"integer"
+              "type":"string"
             }
-          }          
-        ],     
+          }           
+        ],            
         "responses": {
           "200": {
-            "description": "User deleted."
+            "description": "The current weather data in JSON format.",
+            "content": {
+              "application/json":{
+                "schema":{
+                  "$ref": "#/components/schemas/Success for City"
+                }
+              }
+            }
           }
         }
       }
@@ -141,24 +124,87 @@
   },
   "components": {
     "schemas": {
-      "User": {
-        "required": [
-          "id"
-        ],
+      "Success for City": {        
+        "type": "object",
+        "properties": {
+          "status":{
+            "description": "The status of the response.",
+            "type": "string",          
+            "example": "OK"
+          },
+          "data":{
+            "description": "The data in JSON format.",
+            "type":"array",
+            "items":{
+              "$ref": "#/components/schemas/City" 
+            }
+          }
+        }
+      },
+      "Success for Weather": {        
+        "type": "object",
+        "properties": {
+          "status":{
+            "description": "The status of the response.",
+            "type": "string",          
+            "example": "OK"
+          },
+          "data":{
+            "description": "The data in JSON format.",
+            "$ref": "#/components/schemas/Weather"
+          }
+        }
+      },
+      "City": {        
         "type": "object",
         "properties": {
           "id":{
-            "description": "The user id.",
-            "type": "integer",          
-            "example": "3"
+            "description": "The id of the city.",
+            "type": "string",          
+            "example": "place.11905458085992730"
           },
           "name":{
-            "description": "The user name.",
+            "description": "The name of the city.",
             "type":"string",          
-            "example":"Adrian"
+            "example":"Leganés, Madrid, España"
+          },
+          "longitude":{
+            "description": "The longitude of the city.",
+            "type":"number",          
+            "example":"-3.7654"
+          },
+          "latitude":{
+            "description": "The latitude of the city.",
+            "type":"number",          
+            "example":"40.32825"
           }
         }
-      }
+      },
+      "Weather": {        
+        "type": "object",
+        "properties": {
+          "description":{
+            "description": "The description of the weather.",
+            "type": "string",          
+            "example": "cielo claro"
+          },
+          "temperature":{
+            "description": "The current temperature.",
+            "type":"number",          
+            "example":"18.53"
+          },
+          "temperatureMin":{
+            "description": "The minimum temperature.",
+            "type":"number",          
+            "example":"17.22"
+          },
+          "temperatureMax":{
+            "description": "The maximum temperatura.",
+            "type":"number",          
+            "example":"20"
+          }
+        }
+      }      
     }
   }
 }
